Fixed contact section messages and spacing.

--- a/public_html/css/scrolling-nav.css
+++ b/public_html/css/scrolling-nav.css
@@ -57,6 +57,7 @@ of those sections to manage the look and feel of the site. */
 .contact-section {
 	/**height: 100%;**/
 	padding-top: 50px;
+	padding-bottom:30px;
 	text-align: center;
 	background: #fff;
 }
